--- a/build.gradle
+++ b/build.gradle
@@ -9,16 +9,16 @@ repositories {
 
 allure {
     autoconfigure = true
-    version = '2.13.8'
+    version = "2.13.8"
 
     useJUnit5 {
-        version = '2.13.8'
+        version = "2.13.8"
     }
 }
 
 dependencies {
-    testImplementation "com.codeborne:selenide:5.17.3"
     testImplementation "io.qameta.allure:allure-selenide:2.13.8"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
 
